fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,8 @@ input:-webkit-autofill:active {
 #notifs-form-input:focus {
   border: solid 2px #ccc;
 }
+
+.container {  
+  display: flex;  
+
+}
